update code for close art
